Fix alignment of chat header text

--- a/frontend/src/app/App.css
+++ b/frontend/src/app/App.css
@@ -69,7 +69,6 @@
   height: 200px;
   /* Limit scope of absolute child positions (specifically, allow chat input to stay at bottom) */
   position: relative;
-  text-align: left;
 }
 
 #chat-messages {
@@ -87,6 +86,10 @@
   overflow-anchor: auto;
   /* Must have *some* height */
   height: 1px;
+}
+
+#chat-widget {
+  text-align: left;
 }
 
 #chat-widget > form > button {
